# Movable-and-Resizeable-QWidgets

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  tcontainer.hpp  xmake.lua
sources/: mainwindow.cpp  tcontainer.cpp
